product fetching from DB and product matching criteria

--- a/test/shopify.app.test.toml
+++ b/test/shopify.app.test.toml
@@ -2,7 +2,7 @@
 
 name = "Test"
 client_id = "528cee816890107c1206101a2abf366a"
-application_url = "https://pilot-posted-rover-av.trycloudflare.com"
+application_url = "https://arrow-involve-sr-ge.trycloudflare.com"
 embedded = true
 
 [access_scopes]
@@ -12,9 +12,9 @@ use_legacy_install_flow = true
 
 [auth]
 redirect_urls = [
-  "https://pilot-posted-rover-av.trycloudflare.com/auth/callback",
-  "https://pilot-posted-rover-av.trycloudflare.com/auth/shopify/callback",
-  "https://pilot-posted-rover-av.trycloudflare.com/api/auth/callback"
+  "https://arrow-involve-sr-ge.trycloudflare.com/auth/callback",
+  "https://arrow-involve-sr-ge.trycloudflare.com/auth/shopify/callback",
+  "https://arrow-involve-sr-ge.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
